--- a/features2/index.html
+++ b/features2/index.html
@@ -1,263 +1,201 @@
 <!doctype html>
-<html lang="en" data-theme="light">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Business Infinity — Features</title>
-    <meta name="description" content="Features that feel like strategy in motion. Persistent AI boardroom, domain-tuned C‑suite agents, and live systems integration." />
-    <meta name="theme-color" content="#f9fafb" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+    <meta name="color-scheme" content="light dark" />
+    <meta
+      name="description"
+      content="Business Infinity — Outcome-led features for a persistent AI boardroom. Built for governed agency, native integrations, rolling context, and investor-grade narratives."
+    />
+    <title>Business Infinity — Outcome‑led features</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <a class="skip-link" href="#main">Skip to content</a>
 
     <header class="site-header" role="banner">
       <div class="container header-inner">
-        <a class="brand" href="#" aria-label="Business Infinity home">
+        <a class="brand" href="/" aria-label="Business Infinity home">
           <span class="brand-mark" aria-hidden="true">∞</span>
           <span class="brand-name">Business Infinity</span>
         </a>
 
-        <nav class="site-nav" aria-label="Primary">
-          <button class="nav-toggle" aria-controls="primary-menu" aria-expanded="false">
-            <span class="nav-toggle-box" aria-hidden="true"></span>
-            <span class="nav-toggle-label">Menu</span>
-          </button>
+        <button
+          class="nav-toggle"
+          aria-label="Toggle navigation"
+          aria-expanded="false"
+          aria-controls="site-nav"
+        >
+          <span class="nav-toggle-bar" aria-hidden="true"></span>
+        </button>
 
-          <ul id="primary-menu" class="menu">
-            <li><a href="#">Overview</a></li>
-            <li><a href="#" aria-current="page">Features</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Docs</a></li>
-            <li><a href="#">Contact</a></li>
+        <nav id="site-nav" class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="#features" aria-current="page">Features</a></li>
+            <li><a href="#how-it-works">How it works</a></li>
+            <li><a href="#cta">Get access</a></li>
           </ul>
-
-          <button class="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">
-            <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true">
-              <path fill="currentColor" d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
-            </svg>
-          </button>
         </nav>
       </div>
     </header>
 
-    <main id="main">
-      <!-- Hero -->
+    <main id="main" tabindex="-1">
       <section class="hero section">
-        <div class="container grid-2">
-          <div class="hero-copy reveal">
-            <h1 class="h1">Features that feel like strategy in motion</h1>
-            <p class="lede">
-              A persistent AI boardroom with domain‑tuned C‑suite agents, integrated across ERP/MES/CRM/SaaS — turning every decision into compounding momentum.
-            </p>
-            <div class="cta-row">
-              <a class="btn btn-primary" href="#">Request a demo</a>
-              <a class="btn btn-ghost" href="#">Explore ASI Saga</a>
-            </div>
-          </div>
-          <div class="hero-art reveal" aria-hidden="true">
-            <div class="canvas">
-              <div class="node n1"></div>
-              <div class="node n2"></div>
-              <div class="node n3"></div>
-              <div class="node n4"></div>
-              <div class="node n5"></div>
-              <svg class="links" viewBox="0 0 400 300" preserveAspectRatio="none">
-                <path d="M60 220 C130 160, 140 100, 210 80" />
-                <path d="M210 80 C260 100, 300 160, 340 200" />
-                <path d="M100 120 C150 140, 210 80, 260 120" />
-                <path d="M60 220 C120 240, 200 200, 340 200" />
-              </svg>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Value props -->
-      <section class="value-band section">
-        <div class="container value-grid">
-          <div class="value-item reveal">
-            <div class="icon" aria-hidden="true">🧭</div>
-            <h3 class="h5">Always‑on strategy</h3>
-            <p>Deliberation that never sleeps — agents keep context, surface trade‑offs, and prepare options before you ask.</p>
-          </div>
-          <div class="value-item reveal">
-            <div class="icon" aria-hidden="true">🔗</div>
-            <h3 class="h5">Live systems integration</h3>
-            <p>ERP/MES/CRM/SaaS integration means actions and insights land where work happens.</p>
-          </div>
-          <div class="value-item reveal">
-            <div class="icon" aria-hidden="true">📈</div>
-            <h3 class="h5">Compounding learning</h3>
-            <p>Every sprint sharpens the next — knowledge loops capture outcomes, not just notes.</p>
-          </div>
-          <div class="value-item reveal">
-            <div class="icon" aria-hidden="true">🛡️</div>
-            <h3 class="h5">Governance built‑in</h3>
-            <p>Transparent trails, clear roles, and reversible actions by design.</p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Features grid -->
-      <section class="features section">
         <div class="container">
-          <header class="section-header reveal">
-            <h2 class="h2">What you can do</h2>
-            <p class="muted">Outcome‑first capabilities that turn complexity into clarity.</p>
-          </header>
-
-          <div class="feature-grid">
-            <article class="feature-card reveal">
-              <div class="fc-head">
-                <div class="fc-icon" aria-hidden="true">🏛️</div>
-                <h3 class="h4">Persistent AI boardroom</h3>
-              </div>
-              <p>Keep a living agenda, open questions, and ready‑to‑run options across product, go‑to‑market, and operations.</p>
-              <ul class="bullets">
-                <li><strong>Continuity:</strong> Agents remember decisions, constraints, and rationale.</li>
-                <li><strong>Velocity:</strong> Pre‑drafted briefs, roadmaps, and scenario trees.</li>
-                <li><strong>Focus:</strong> Escalations only when your judgment is needed.</li>
-              </ul>
-            </article>
-
-            <article class="feature-card reveal">
-              <div class="fc-head">
-                <div class="fc-icon" aria-hidden="true">🧠</div>
-                <h3 class="h4">Domain‑tuned C‑suite agents</h3>
-              </div>
-              <p>CFO to CPO — each agent speaks the language of your domain and systems.</p>
-              <ul class="bullets">
-                <li><strong>Alignment:</strong> Objectives map to KPIs and data sources.</li>
-                <li><strong>Depth:</strong> Tactics grounded in real constraints, not abstractions.</li>
-                <li><strong>Dialogue:</strong> Structured debate, not monologues.</li>
-              </ul>
-            </article>
-
-            <article class="feature-card reveal">
-              <div class="fc-head">
-                <div class="fc-icon" aria-hidden="true">🔌</div>
-                <h3 class="h4">Live systems integration</h3>
-              </div>
-              <p>Read and write into ERP/MES/CRM/SaaS safely, with guardrails and approvals.</p>
-              <ul class="bullets">
-                <li><strong>Bridged:</strong> Data where it’s needed, when it’s needed.</li>
-                <li><strong>Safe:</strong> Policy‑aware actions and dry‑run previews.</li>
-                <li><strong>Observable:</strong> Health checks and latency budgets.</li>
-              </ul>
-            </article>
-
-            <article class="feature-card reveal">
-              <div class="fc-head">
-                <div class="fc-icon" aria-hidden="true">♻️</div>
-                <h3 class="h4">Self‑improving loops</h3>
-              </div>
-              <p>Retrospectives that actually change behavior — agents learn from outcomes, not just plans.</p>
-              <ul class="bullets">
-                <li><strong>Memory:</strong> Patterns, anti‑patterns, and playbooks evolve.</li>
-                <li><strong>Signals:</strong> Weak signals flagged before they become issues.</li>
-                <li><strong>Uplift:</strong> Re‑usable assets across teams and contexts.</li>
-              </ul>
-            </article>
-
-            <article class="feature-card reveal">
-              <div class="fc-head">
-                <div class="fc-icon" aria-hidden="true">🎬</div>
-                <h3 class="h4">Cinematic storytelling</h3>
-              </div>
-              <p>From analysis to narrative — investor‑grade decks, interactive demos, and director’s scripts.</p>
-              <ul class="bullets">
-                <li><strong>Clarity:</strong> Complex systems explained simply.</li>
-                <li><strong>Emotion:</strong> Audiences feel the stakes and the path.</li>
-                <li><strong>Momentum:</strong> Every artifact moves a decision forward.</li>
-              </ul>
-            </article>
-
-            <article class="feature-card reveal">
-              <div class="fc-head">
-                <div class="fc-icon" aria-hidden="true">📜</div>
-                <h3 class="h4">Governance and audit</h3>
-              </div>
-              <p>Clear roles, reversible actions, and traceable decisions without friction.</p>
-              <ul class="bullets">
-                <li><strong>Control:</strong> Approval chains and policy packs.</li>
-                <li><strong>Trace:</strong> Time‑stamped, human‑readable logs.</li>
-                <li><strong>Trust:</strong> Shared source of truth across teams.</li>
-              </ul>
-            </article>
+          <h1 class="hero-title">
+            A persistent AI boardroom that turns intent into outcomes
+          </h1>
+          <p class="hero-copy">
+            Domain‑tuned C‑suite agents deliberate, simulate, and act within
+            your governance — carrying context across weeks, not sessions.
+          </p>
+          <div class="hero-actions">
+            <a class="button button-primary" href="#cta">Request early access</a>
+            <a class="button button-ghost" href="#features">Explore features</a>
           </div>
         </div>
       </section>
 
-      <!-- How it works -->
-      <section class="how section">
+      <section id="features" class="section">
         <div class="container">
-          <header class="section-header reveal">
-            <h2 class="h2">How it works</h2>
-            <p class="muted">A simple loop, relentlessly executed.</p>
-          </header>
-          <div class="how-grid">
-            <div class="how-step reveal">
-              <div class="step-num">01</div>
-              <h3 class="h5">Connect</h3>
-              <p>Link your ERP/MES/CRM/SaaS and define objectives. Governance packs set the rails.</p>
-            </div>
-            <div class="how-step reveal">
-              <div class="step-num">02</div>
-              <h3 class="h5">Deliberate</h3>
-              <p>Agents debate trade‑offs and propose options with live data pulls and dry‑runs.</p>
-            </div>
-            <div class="how-step reveal">
-              <div class="step-num">03</div>
-              <h3 class="h5">Act & learn</h3>
-              <p>Ship with confidence. Outcomes feed playbooks that compound across teams.</p>
-            </div>
+          <h2 class="section-title">Outcome‑led features</h2>
+
+          <div class="grid grid-3">
+            <article class="card reveal">
+              <h3 class="card-title">Rolling context</h3>
+              <p class="card-copy">
+                Your decisions remember. Agents carry forward deliberation,
+                assumptions, and constraints across weeks — not just sessions.
+              </p>
+            </article>
+
+            <article class="card reveal">
+              <h3 class="card-title">Native to your stack</h3>
+              <p class="card-copy">
+                Plug into ERP, CRM, analytics, and tickets to close the loop
+                between intent and instrumentation.
+              </p>
+            </article>
+
+            <article class="card reveal">
+              <h3 class="card-title">Governed agency</h3>
+              <p class="card-copy">
+                Domain‑tuned agents propose, simulate, and act with approvals —
+                so autonomy never outruns accountability.
+              </p>
+            </article>
+
+            <article class="card reveal">
+              <h3 class="card-title">Decision ledger</h3>
+              <p class="card-copy">
+                Every decision is linked, explainable, and auditable. Rationale,
+                data, and outcomes stay traceable end‑to‑end.
+              </p>
+            </article>
+
+            <article class="card reveal">
+              <h3 class="card-title">Scenario studio</h3>
+              <p class="card-copy">
+                Fork reality safely. Run sandboxes, stress tests, and simulations
+                before you commit to a path.
+              </p>
+            </article>
+
+            <article class="card reveal">
+              <h3 class="card-title">Enrollment‑grade narratives</h3>
+              <p class="card-copy">
+                Turn analysis into investor‑ready stories. Auto‑generate decks,
+                briefs, and one‑pagers tailored to your audience.
+              </p>
+            </article>
           </div>
         </div>
       </section>
 
-      <!-- Testimonial -->
-      <section class="quote section">
+      <section id="how-it-works" class="section">
         <div class="container">
-          <figure class="quote-card reveal">
-            <blockquote>
-              “It’s like walking into a board meeting where the homework is already done, and the deck writes itself.”
-            </blockquote>
-            <figcaption>— Lighthouse founder, ASI Saga</figcaption>
-          </figure>
+          <h2 class="section-title">How it works</h2>
+
+          <div class="grid grid-3 steps">
+            <article class="step-card reveal">
+              <h3 class="step-kicker">01</h3>
+              <h4 class="step-title">Connect your truth</h4>
+              <p class="step-copy">
+                Securely link ERP, CRM, analytics, and docs. Configure scopes,
+                approvals, and rate‑limits in one place.
+              </p>
+            </article>
+
+            <article class="step-card reveal">
+              <h3 class="step-kicker">02</h3>
+              <h4 class="step-title">Deliberate with agents</h4>
+              <p class="step-copy">
+                C‑suite roles debate trade‑offs, surface assumptions, and offer
+                proposals with simulations and expected outcomes.
+              </p>
+            </article>
+
+            <article class="step-card reveal">
+              <h3 class="step-kicker">03</h3>
+              <h4 class="step-title">Decide, act, and learn</h4>
+              <p class="step-copy">
+                Approve actions, ship changes, and capture results in the
+                decision ledger. Context compounds over time.
+              </p>
+            </article>
+          </div>
         </div>
       </section>
 
-      <!-- CTA -->
-      <section class="cta section">
-        <div class="container cta-inner reveal">
-          <div>
-            <h2 class="h3">See your strategy move</h2>
-            <p class="muted">Get a guided walkthrough with your real context and systems.</p>
-          </div>
-          <a class="btn btn-primary" href="#">Request a demo</a>
+      <section id="cta" class="section section-accent">
+        <div class="container">
+          <h2 class="section-title">Bring persistent clarity to your boardroom</h2>
+          <p class="section-copy">
+            Early access is rolling out to teams that value governed autonomy
+            and explainable outcomes.
+          </p>
+          <form class="cta-form" action="#" method="post" novalidate>
+            <label class="visually-hidden" for="email">Work email</label>
+            <input
+              id="email"
+              name="email"
+              type="email"
+              inputmode="email"
+              autocomplete="email"
+              placeholder="you@company.com"
+              required
+            />
+            <button class="button button-primary" type="submit">
+              Request invite
+            </button>
+          </form>
+          <p class="fine-print">
+            We’ll only use your email for access and onboarding communications.
+          </p>
         </div>
       </section>
     </main>
 
-    <footer class="site-footer">
+    <footer class="site-footer" role="contentinfo">
       <div class="container footer-inner">
-        <div class="footer-brand">
+        <p class="footer-brand">
           <span class="brand-mark" aria-hidden="true">∞</span>
           <span class="brand-name">Business Infinity</span>
-        </div>
-        <nav aria-label="Footer">
-          <ul class="footer-menu">
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Security</a></li>
-            <li><a href="#">Status</a></li>
-          </ul>
-        </nav>
-        <p class="muted small">© <span id="year"></span> Business Infinity. All rights reserved.</p>
+        </p>
+        <ul class="footer-links">
+          <li><a href="#features">Features</a></li>
+          <li><a href="#how-it-works">How it works</a></li>
+          <li><a href="#cta">Get access</a></li>
+        </ul>
+        <p class="fine-print">© <span id="year"></span> Business Infinity</p>
       </div>
     </footer>
 
-    <script src="app.js" defer></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
